--- a/login.html
+++ b/login.html
@@ -1,9 +1,9 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="/CSS/login.css">
+<link rel="stylesheet" href="CSS/login.css">
 
-<script src="/JS/jquery-3.4.1.min.js" 
+<script src="JS/jquery-3.4.1.min.js" 
 integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-<script src='/JS/login.js' defer></script>
+<script src='JS/login.js' defer></script>
 
 <div class="login-page">
   <div class="form">
