--- a/category.html
+++ b/category.html
@@ -3,11 +3,11 @@
   rel="stylesheet"
   href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
 />
-<link rel="stylesheet" href="/CSS/category.css" />
+<link rel="stylesheet" href="https://andrupirvulescu.github.io/PetAdoptRomania/CSS/category.css" />
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
 <link rel="stylesheet" href="https://cdn.datatables.net/1.10.12/css/dataTables.bootstrap.min.css" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css" />
-<script src='/JS/category.js' defer></script>
+<script src='https://andrupirvulescu.github.io/PetAdoptRomania/JS/category.js' defer></script>
 <script src='//code.jquery.com/jquery-1.12.3.js'></script>
 <script src='https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min.js'></script>
 <script src='https://cdn.datatables.net/responsive/2.1.0/js/dataTables.responsive.min.js'></script>
