--- a/contact.html
+++ b/contact.html
@@ -1,11 +1,11 @@
-<link rel="stylesheet" href="/CSS/contact.css" />
+<link rel="stylesheet" href="https://andrupirvulescu.github.io/PetAdoptRomania/CSS/contact.css" />
 <link
   rel="stylesheet"
   href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
 />
 <link
   rel="stylesheet"
-  href="/CSS/bootstrap.min.css"
+  href="https://andrupirvulescu.github.io/PetAdoptRomania/CSS/bootstrap.min.css"
 />
 <script src='/JS/contact.js' defer></script>
 <header class="header">
