--- a/home.html
+++ b/home.html
@@ -2,8 +2,8 @@
   rel="stylesheet"
   href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
 />
-<link rel="stylesheet" href="/CSS/home.css" />
-<script src='/JS/home.js' defer></script>
+<link rel="stylesheet" href="https://andrupirvulescu.github.io/PetAdoptRomania/CSS/home.css" />
+<script src='https://andrupirvulescu.github.io/PetAdoptRomania/JS/home.js' defer></script>
 
 <header class="header">
     <a href="home.html" style="color: purple;" class="logo">PetAdopt Romania</a>
