--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
       <table>
         <tr>
           <td>
-            <img src="/images/animals.jpg" width="30%" />
+            <img src="https://andrupirvulescu.github.io/PetAdoptRomania/images/animals.jpg" width="30%" />
           </td>
           <td>
             <div style="padding-left: 15px">
