--- a/contact.html
+++ b/contact.html
@@ -1,12 +1,7 @@
 <link rel="stylesheet" href="/CSS/contact.css" />
-<link
-  rel="stylesheet"
-  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-/>
-<link
-  rel="stylesheet"
-  href="/CSS/bootstrap.min.css"
-/>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
+<link rel="stylesheet" href="/CSS/bootstrap.min.css"/>
+
 <script src='/JS/contact.js' defer></script>
 <header class="header">
   <a href="home.html" style="color: purple;" class="logo">PetAdopt Romania</a>
