--- a/create_account.html
+++ b/create_account.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="/CSS/login.css">
 
-<script src='/JS/create_account.js' defer></script>
+<script src='https://andrupirvulescu.github.io/PetAdoptRomania/JS/create_account.js' defer></script>
 
 <div class="login-page">
   <div class="form">
