--- a/create_account.html
+++ b/create_account.html
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="/CSS/login.css">
+<link rel="stylesheet" href="https://andrupirvulescu.github.io/PetAdoptRomania/CSS/login.css">
 
 <script src='https://andrupirvulescu.github.io/PetAdoptRomania/JS/create_account.js' defer></script>
 
