--- a/create_account.html
+++ b/create_account.html
@@ -11,7 +11,7 @@
       <input id="password_reg" type="password" placeholder="Parola"/>
       <input id="email" type="text" placeholder="Adresa de email"/>
       <button id="create">Creaza Cont</button>
-      <p class="message">Ai deja cont? <a href="login.html">Logheaza-te</a></p>
+      <p class="message">Ai deja cont? <a href="https://andrupirvulescu.github.io/PetAdoptRomania/login.html">Logheaza-te</a></p>
     </form>
   </div>
   <footer>
