--- a/login.html
+++ b/login.html
@@ -1,13 +1,6 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://andrupirvulescu.github.io/PetAdoptRomania/CSS/login.css">
-
-<<<<<<< HEAD
-<script src='/JS/login.js' defer></script>
-=======
-<script src="https://andrupirvulescu.github.io/PetAdoptRomania/JS/jquery-3.4.1.min.js" 
-integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 <script src='https://andrupirvulescu.github.io/PetAdoptRomania/JS/login.js' defer></script>
->>>>>>> 26362de366252dca07ca6a8e8f4e339c55d112b2
 
 <div class="login-page">
   <div class="form">
@@ -16,7 +9,7 @@ integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="ano
       <input id="username" type="text" placeholder="Email"/>
       <input id="password" type="password" placeholder="Parola"/>
       <button id="login" >Login</button>  
-      <p class="message">Nu ai cont? <a href="create_account.html">Creeaza un cont</a></p>
+      <p class="message">Nu ai cont? <a href="https://andrupirvulescu.github.io/PetAdoptRomania/create_account.html">Creeaza un cont</a></p>
     </form>
   </div>
   <footer>
