--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
       <li><a href="home.html">Acasa</a></li>
       <li><a href="about.html">Despre Noi</a></li>
       <li><a href="contact.html">Contact</a></li>
-      <li><a id="logout" href="login.html">Logout</a></li>
+      <li><a id="logout" href="https://andrupirvulescu.github.io/PetAdoptRomania/login.html">Logout</a></li>
     </ul>
   </header>
   
