--- a/contact.html
+++ b/contact.html
@@ -1,29 +1,17 @@
-<<<<<<< HEAD
-<link rel="stylesheet" href="/CSS/contact.css" />
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
-<link rel="stylesheet" href="/CSS/bootstrap.min.css"/>
 
-=======
 <link rel="stylesheet" href="https://andrupirvulescu.github.io/PetAdoptRomania/CSS/contact.css" />
-<link
-  rel="stylesheet"
-  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-/>
-<link
-  rel="stylesheet"
-  href="https://andrupirvulescu.github.io/PetAdoptRomania/CSS/bootstrap.min.css"
-/>
->>>>>>> 26362de366252dca07ca6a8e8f4e339c55d112b2
-<script src='/JS/contact.js' defer></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
+<link rel="stylesheet" href="https://andrupirvulescu.github.io/PetAdoptRomania/CSS/bootstrap.min.css"/>
+<script src='https://andrupirvulescu.github.io/PetAdoptRomania/JS/contact.js' defer></script>
 <header class="header">
   <a href="home.html" style="color: purple;" class="logo">PetAdopt Romania</a>
   <input class="menu-btn" type="checkbox" id="menu-btn" />
   <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
   <ul class="menu">
-    <li><a href="home.html">Acasa</a></li>
-    <li><a href="about.html">Despre Noi</a></li>
-    <li><a href="contact.html">Contact</a></li>
-    <li><a id="logout" href="login.html">Logout</a></li>
+    <li><a href="https://andrupirvulescu.github.io/PetAdoptRomania/home.html">Acasa</a></li>
+    <li><a href="https://andrupirvulescu.github.io/PetAdoptRomania/about.html">Despre Noi</a></li>
+    <li><a href="https://andrupirvulescu.github.io/PetAdoptRomania/contact.html">Contact</a></li>
+    <li><a id="logout" href="https://andrupirvulescu.github.io/PetAdoptRomania/login.html">Logout</a></li>
   </ul>
 </header>
 </br>
